# nexus

./: .appveyor.yml  .clang-format  .clangformat  .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml  clang-tidy.yml  linux.yml  main.yml  windows.yml
cmake/: code_coverage.cmake  common_precompiled.cmake  compiler_features.cmake  compiler_warnings.cmake  conan.cmake  cotire.cmake  default_settings.cmake  fetch_content.cmake  googletest.cmake  imgui-sfml.cmake.in  imgui.cmake  imgui.cmake.in  rapidjson.cmake  sanitizers.cmake  sdl.cmake  sdl.cmake.in  sfml.cmake  sfml.cmake.in
games/lost-cities/: CMakeLists.txt
games/lost-cities/src/: main.cpp
games/lost-cities/src/shared/: game.h
games/pac-man/: CMakeLists.txt
games/pac-man/resources/: pac_man.cmake
games/pac-man/src/: main.cpp
nexus-core/: CMakeLists.txt
nexus-core-tests/: CMakeLists.txt
nexus-core-tests/src/: event_binding.cpp  event_broker.cpp  module_manager.cpp  number_pool.cpp
nexus-core-tests/src/core/: event_broker.cpp  module_manager.cpp  number_pool.cpp  state_machine.cpp
nexus-core-tests/src/math/: vector.cpp
nexus-core/include/nexus/: nexus-core.h
nexus-core/src/: event_binding.h  event_broker.h  module_manager.h  number_pool.h  precompiled.h
nexus-core/src/core/: event_broker.h  module_manager.h  state_machine.h  time.h
nexus-core/src/json/: json.h
nexus-core/src/util/: execution.h
nexus-game/: CMakeLists.txt
nexus-game/resources/pac_man/maps/: original.txt
nexus-game/src/: main.cpp  precompiled.h
nexus-game/src/game/: game.h
nexus-game/src/game/model/: board.h  item.h
nexus-game/src/game/view/: board.h  item.h
nexus-game/src/pac_man/: game.h  ghost.h  maze.h  player.h  world_cell.h  world_definition.h  world_model.h  world_view.h
nexus-game/src/shared/: game.h
nexus-gfx/: CMakeLists.txt
nexus-gfx/include/nexus/: nexus-gfx.h  nexus-sfml.h
nexus-gfx/src/: precompiled.h
nexus-gfx/src/gfx/: sprite_animation.h
nexus-gfx/src/sfml/: color.h  drawable.h  gfx_sfml.h  image.h  keyboard.h  mouse.h  precompiled.h  shapes.h  sprite.h  texture.h  util.h  window.h
nexus-lib/: CMakeLists.txt  input_binding.h
nexus-lib/include/nexus/: nexus-lib.h  nexus.h
nexus-lib/src/: color.h  engine.h  engine_interface.h  event_binding.h  event_handler.h  input_device.h  input_handler.h  keyboard.h  precompiled.h  renderer.h  resource_cache.h  sprite.h  time.h  window.h
nexus-lib/src/application/: application.h
nexus-lib/src/engine/: parallel.h  precompiled.h
nexus-lib/src/events/: event_broadcaster.h  event_dispatcher.h  event_listener.h  event_system.h
nexus-lib/src/math/: rect.h  vector.h
nexus-lib/src/mock/: window.h
nexus-lib/src/module/: module.h  module_dependency.h  module_id.cpp  module_id.h  module_manager.h
nexus-lib/src/sfml/: drawable.h  engine.h  input.h  input_device.h  keyboard.h  mouse.h  precompiled.h  sfml_drawable.h  sfml_keyboard.h  sfml_mouse.h  sfml_window.h  shapes.h  sprite.h  texture.h  util.h  view.h  window.h
nexus-lib/src/util/: file.h  number_pool.h  type_id.cpp  type_id.h
nexus-sample/: CMakeLists.txt
nexus-sample/src/: main.cpp  precompiled.h
nexus-tests/: CMakeLists.txt
nexus-tests/src/: empty.cpp  input_handler.cpp  precompiled.h
nexus-tests/src/engine/: color.cpp  event_binding.cpp  keyboard.cpp  resource_cache.cpp  time.cpp  window.cpp
nexus-tests/src/events/: event_broadcaster.cpp  event_dispatcher.cpp  event_system.cpp
nexus-tests/src/math/: rect.cpp  vector.cpp
nexus-tests/src/module/: module.cpp
nexus-tests/src/util/: number_pool.cpp
nexus-tests/src/utils/: type_id.cpp
nexus/core/: CMakeLists.txt
nexus/core/include/nexus/: nexus-core.h
nexus/core/src/core/: module_manager.h  number_pool.h  time.h
nexus/core/src/math/: rect.h  vector.h
nexus/core/src/util/: multicast_delegate.h
nexus/gfx/: CMakeLists.txt
nexus/gfx/include/nexus/: nexus-sfml.h
nexus/gfx/src/gfx/: color.h  sprite_animation.h
nexus/gfx/src/sfml/: blend_mode.h  drawable.h  keyboard.h  line.h  shapes.h  sprite.h  texture.h  util.h  view.h  window.h
nexus/gfx/src/util/: performance_monitor.h
nexus/tests/: CMakeLists.txt
nexus/tests/src/: precompiled.h
nexus/tests/src/core/: event_binding.cpp  module_manager.cpp  number_pool.cpp
nexus/tests/src/util/: multicast_delegate.cpp
samples/: CMakeLists.txt
samples/interface_sample/: CMakeLists.txt
samples/interface_sample/src/: main.cpp  precompiled.h
samples/interface_sample/src/view/: node_editor.h  performance.h
samples/pac_man/: CMakeLists.txt
samples/pac_man/res/textures/: sprite_sheet.h
samples/pac_man/src/: main.cpp  precompiled.h
samples/pac_man/src/game/: entity.h  entity_factory.h  game.h  game_data.h  maze.h  maze_factory.h  navgrid.h  player.h  sprite_sheet.h  util.h
samples/pac_man/src/util/: animation.h  sprite_factory.h  sprite_sheet.h
samples/sample_1/: CMakeLists.txt
samples/sample_1/src/: main.cpp
